Added Button for Projects as well as a button to create new projects, need to e renamed and formatted

--- a/Source Code/src/style.css
+++ b/Source Code/src/style.css
@@ -1,6 +1,6 @@
 .welcome {
-  height: 100vh;
   display: flex;
-  align-items: center;
+  margin-top: 4em;
+  align-items: left;
   justify-content: center;
 }
