--- a/Source Code/src/style.css
+++ b/Source Code/src/style.css
@@ -1,6 +1,9 @@
 .welcome {
   display: flex;
   margin-top: 4em;
-  align-items: left;
   justify-content: center;
+}
+
+.smallFont {
+  font-size: 2em;
 }
