--- a/Source Code/src/style.css
+++ b/Source Code/src/style.css
@@ -1,13 +1,7 @@
-.welcome {
-  display: flex;
-  margin-top: 4em;
-  justify-content: center;
-}
-
-.smallFont {
-  font-size: 2em;
-}
-
-.searchBar {
-  width: 4000px;
+.centered { 
+  height: 100vh;
+  width: 100vw;
+  display:flex;
+  justify-content:center;
+  align-items:center;
 }
