--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,12 @@
+html {
+  height: 100%;                       /* note #1 */
+}
+body {
+  height: 100%;                       /* note #1 */
+  margin: 0;                          /* note #2 */
+  overflow: hidden;
+}
+
 .centered { 
   height: 100vh;
   width: 100vw;
