--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,9 @@
 html {
-  height: 100%;                       /* note #1 */
+  height: 100%;
 }
 body {
-  height: 100%;                       /* note #1 */
-  margin: 0;                          /* note #2 */
+  height: 100%;
+  margin: 0;
   overflow: hidden;
 }
 
