--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,7 @@
 html {
   height: 100vh;
 }
+
 body {
   height: 100vh;
   margin: 0;
@@ -12,7 +13,7 @@ body {
   width: 100vw;
   display:flex;
   justify-content:center;
-  align-items:center;
+  margin-top: 15em;
 }
 
 .app {
