added table to admin/user page

--- a/src/components/Admin/Users/Users.css
+++ b/src/components/Admin/Users/Users.css
@@ -1,3 +1,10 @@
 table th {
   cursor: move;
 }
+
+.userBoxList {
+  display: flex;
+  align-items: center;
+  margin-left: 2em;
+  margin-right: 1em;
+}
