--- a/src/components/Projects/SearchBar/SearchBar.css
+++ b/src/components/Projects/SearchBar/SearchBar.css
@@ -21,6 +21,7 @@
   font-size: 16px;
   color: rgba(255,255,255,0.9);  
   margin-right: 1em;
+  width: max-content;
 }
 
 .gear-icon {
@@ -50,6 +51,7 @@
   color: rgba(255,255,255,0.9); 
   float: right;
   margin-left: 30px;
+  width: max-content;
 }
 
 .advanced-search:hover {
