--- a/src/style.css
+++ b/src/style.css
@@ -59,3 +59,7 @@ body {
   border-left: 5px solid rgba(0, 0, 0, 0.5);
   border-right: 5px solid rgba(0, 0, 0, 0.5);
 }
+
+.ant-menu-dark, .ant-menu-dark .ant-menu-sub {
+  background: #1b1c1d
+}
