--- a/src/components/Admin/ItemTypes/ItemTypes.css
+++ b/src/components/Admin/ItemTypes/ItemTypes.css
@@ -1,3 +1,62 @@
 td, th {
     cursor: move;
+    position: relative;
 }
+
+.button{
+    float: right;
+    clear: all;
+    margin: 20;
+    background: coral;
+
+}
+
+.modal {
+    width:100em;
+    height: 500em;
+    background-color: rgba(0, 0, 0, 0.7) !important;
+    position: absolute;
+    justify-content: center;
+    display: flex;
+    z-index: 10;
+    border: 10em 10em 10em 10em;
+  }
+
+  
+  .display-block {
+    display: block;
+    /* align-content: center; */
+  }
+  
+  .display-none {
+    display: none;
+  }
+
+  /* .foot {
+    width:100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    justify-content: center;
+    display: flex;
+    visibility: visible;
+    z-index: 1;
+  } */
+
+  input {
+    display: block;
+    align-content: center;
+    margin: 2em;
+  }
+
+  .backdrop {
+    width: 100%;
+    height: 500;
+    /* background-color: rgba(0, 0, 0, 0.7) !important; */
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    z-index: 1;
+    border: 2em;
+    border-color: blue;
+  }
