--- a/src/components/Admin/ItemTypes/ItemTypes.css
+++ b/src/components/Admin/ItemTypes/ItemTypes.css
@@ -4,10 +4,16 @@ th {
   position: relative;
 }
 
+.heading {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
+
 #button {
   float: right;
   clear: both;
-  margin-left: 10px;
+  margin-right: 20px;
+  /* color: blue; */
+  /* background-color: rgb(236, 235, 235); */
 }
 
 .modal {
