--- a/src/components/Admin/ItemTypes/ItemTypes.css
+++ b/src/components/Admin/ItemTypes/ItemTypes.css
@@ -21,9 +21,9 @@
   /* width: 100em;
   height: 500em; */
   background-color: rgba(0, 0, 0, 0.7) !important;
-  /* position: absolute;
+  position: absolute;
   justify-content: center;
-  display: flex;
+  /* display: flex;
   z-index: 10; */
 }
 
