--- a/src/components/Projects/SearchBar/SearchBar.css
+++ b/src/components/Projects/SearchBar/SearchBar.css
@@ -1,6 +1,12 @@
 .searchbar {
   grid-area: searchbar;  
 }
+.tempImportButton{
+  display:flex;
+  flex-direction: row;
+  align-items:center;
+  margin-right: 20px;
+}
 .tempExportButton{
   display:flex;
   flex-direction: row;
